index.scss
html {
    font-size: 1rem;
    font-family: 'Bitter', serif;
    background-color: #000;
    z-index: -100;
    color: lightgray;
    overflow: hidden;   

    height: 100%;

    margin: 0;
}

body::-webkit-scrollbar {
    display: none;
}

body {
    margin: 0;
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;
    overflow-y: scroll;
    height: 100%;

    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
    -webkit-overflow-scrolling: touch;
}

.canvas-container {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    animation: forwards ease-in canvas-animation 1s;

    pointer-events: none;
}

canvas {
    pointer-events: none;
}

@keyframes canvas-animation {
    from {
        opacity: 30%;
        filter: blur(20px);
    }

    to {
        opacity: 100%;
        filter: unset;
    }
}

// mobile only styles
@media only screen and (max-width: 768px) {
    .flex-column {
        padding-top: 0 !important;
    }
    .project-card {
        width: 80% !important;
    }

    .scrollbar {
        position: absolute;
        left: 0;
        bottom: 2.5vw;
        width: 100vw;
        height: 5vh;

        display: flex;
        flex-direction: row;
        justify-content: center;
        
        .indicators {
            padding: 0.5rem 1rem;
            height: 1rem;
            flex-direction: row;
        }
        
        .indicator-container {
            flex-direction: column;
        }
    }
}

// desktop only styles
@media only screen and (min-width: 768px) {
    .scrollbar {
        position: absolute;
        top: 0;
        left: 2.5vw;
        height: 100vh;
        width: 5vw;

        display: flex;
        flex-direction: column;
        justify-content: center;
        
        .indicators {
            padding: 2rem 0.5rem;
            flex-direction: column;
        }

        
    }
}

.scrollbar {
    z-index: 100;

    .indicators {
        background-color: #3737371F;
        backdrop-filter: blur(10px);
        border: 0.1rem solid #111;
        border-radius: 1rem;
        box-shadow: 0 0 0.3rem black;

        display: flex;
        justify-content: center;
        gap: 2.5rem;

        .indicator-container {
            display: flex;
            justify-content: center;
        }

        .scroll-indicator {
            display: inline-block;
            width: 0.4rem;
            height: 0.4rem;
            border-radius: 50%;

            text-align: center;

            font-size: 1.5rem;

        }

        .scroll-indicator.off {
            display: inline-block;
            width: 0.4rem;
            height: 0.4rem;
            background: #575757;  
            border: 1px solid darken(#575757,5%);
            border-radius: 50%;

            text-align: center;

            font-size: 1.5rem;

            color: #575757;
            box-shadow: 0 0 0 #00ad68;
        }

        .scroll-indicator.on {
            display: inline-block;
            width: 0.4rem;
            height: 0.4rem;
            background: #00ad68;  
            border: 1px solid darken(#00ad68,5%);
            border-radius: 50%;

            text-align: center;

            font-size: 1.5rem;

            color: #00ad68;
            box-shadow: 0 0 1rem #00ad68;
        }

        .anim-on {
            animation: forwards ease-in-out 0.4s turn-indicator-on;
        }
        .anim-off {
            animation: forwards ease-in-out 0.3s turn-indicator-off;
        }

        @keyframes turn-indicator-on {
            from {
                color: #575757;
                background: #575757;  
                border: 1px solid darken(#575757,5%);
                box-shadow: 0 0 0 #00ad68;
            }
            to {
                color: #00ad68;
                background: #00ad68;  
                border: 1px solid darken(#00ad68,5%);
                box-shadow: 0 0 1rem #00ad68;
            }
        }

        @keyframes turn-indicator-off {
            from {
                color: #00ad68;
                background: #00ad68;  
                border: 1px solid darken(#00ad68,5%);
                box-shadow: 0 0 1rem #00ad68;
            }
            to {
                color: #575757;
                background: #575757;  
                border: 1px solid darken(#575757,5%);
                box-shadow: 0 0 0 #00ad68;
            }
        }
    }
}

.flex-column {
    padding-top: 20rem;
    padding-bottom: 30rem;

    display: flex;
    flex-direction: column;
    gap: 30rem;
}


.centered {
    display: flex;
    justify-content: center;

    scroll-snap-align: center;

    padding: 10em 0;
}



.project-card {
    display: block;
    background-color: #3737371F;
    backdrop-filter: blur(10px);
    border: 0.2rem solid #111;
    border-radius: 1rem;
    box-shadow: 0 0 0.3rem black;

    padding: 1rem;

    width: 60%;






    .title {
        font-size: 2rem;
    }

    p {
        white-space: preserve;
    }

    $status-font-size: 1.3rem;
    $indicator-size: 0.4rem;

    .status {
        float: right;
        font-size: $status-font-size;
        vertical-align: middle;
    }

    .indicator.wip {
        display: inline-block;
        width: 0.4rem;
        height: 0.4rem;
        background: #DD2233;  
        border: 1px solid darken(#DD2233,5%);
        border-radius: 50%;


        font-size: 1.5rem;
        margin-right: 0.2rem;
        margin-bottom: calc($status-font-size / 2 - $indicator-size * 1.25);

        color: #DD2233;
        box-shadow: 0 0 1rem #DD2233;
    }

    .indicator.working {
        display: inline-block;
        width: 0.4rem;
        height: 0.4rem;
        background: #DDAA11;  
        border: 1px solid darken(#DDAA11,5%);
        border-radius: 50%;


        font-size: 1.5rem;
        margin-right: 0.2rem;
        margin-bottom: calc($status-font-size / 2 - $indicator-size * 1.25);

        color: #DDAA11;
        box-shadow: 0 0 1rem #DDAA11;
    }

    .indicator.stable {
        display: inline-block;
        width: 0.4rem;
        height: 0.4rem;
        background: #33DD22;  
        border: 1px solid darken(#33DD22,5%);
        border-radius: 50%;


        font-size: 1.5rem;
        margin-right: 0.2rem;
        margin-bottom: calc($status-font-size / 2 - $indicator-size * 1.25);

        color: #33DD22;
        box-shadow: 0 0 1rem #33DD22;
    }


    .-hover-out {
        animation: forwards 0.1s ease-in-out shadow-animation-out;
    }

    .carousel-container {
        margin: 1rem;
        //border: 0.1rem solid black;
        border-radius: 0.3rem;
        user-select: none;

        img {
            display: block;
            width: 100%;
            border-radius: 0.3rem;
            aspect-ratio: 16 / 9;
            object-fit: cover;
        }

        .carousel-buttons {
            display: flex;
            justify-content: space-between;
            padding: 0 1rem;
            margin: 0.2rem;

            .carousel-button {
                width: 3rem;
                text-align: center;
                border: 0.1rem solid black;
                border-radius: 0.3rem;

                cursor: pointer;
            }
            .carousel-button:hover {
                animation: both 0.1s ease-in-out shadow-animation-in;

            }

            .carousel-progress {
                cursor: default;
            }
        }
    }

    .links {
        float: right;

        a, a:visited{
            text-decoration: none;
            color: lightgray;
        }

        .link {
            display: inline-flex;
            gap: 0.1rem;
            padding: 0.1rem;
            border: 0.05rem solid black;
            border-radius: 0.4rem;
            margin: 0.2rem;

            img {
                filter: contrast(1.5) invert(90%);
                width: auto;
                max-height: 1rem;
                margin: 0.1rem;
            }
        }

        .link:hover {
            animation: forwards 0.1s ease-in-out shadow-animation-in;
        }

        @keyframes shadow-animation-in {
            from {
                box-shadow: 0 0 0 gray;
            }
            to {
                box-shadow: 0 0 1rem gray;
            }
        }

        @keyframes shadow-animation-out {
            from {
                box-shadow: 0 0 1rem gray;
            }
            to {
                box-shadow: 0 0 0 gray;
            }
        }

        
    }
}

